# polymarket-kalshi-arbitrage-bot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: tests.yml
docs/: data.md  draft.md  pruners.md
examples/: run_qwen2_audio.py
scripts/: aggregate_table2.py  reproduce_table2.sh  reproduce_table3.sh
speechkv_trim/: __init__.py  cli.py
speechkv_trim/eval/: gigaspeech.py  in_house_sqa.py  librispeech_long.py  metrics.py
speechkv_trim/models/: qwen2_audio.py  salmonn.py  whisper_llm.py
speechkv_trim/pruners/: __init__.py  base.py  chunk_vad.py  head_l1.py  streaming_anchor.py  token_attn_recency.py  token_saliency.py
speechkv_trim/utils/: __init__.py  audio.py  cache.py  profile.py
src/: config.ts  index.ts  types.ts
src/services/: arbitrage.ts  kalshi.ts  polymarket.ts  polymarketOrders.ts
tests/: test_metrics.py  test_pruners.py
