[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechkv-trim"
version = "0.4.0"
description = "Speech-aware KV cache pruning for decoder-only speech LLMs"
authors = [{name = "Chen Zhuoran"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "torchaudio>=2.1",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.24",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "black"]
fast = ["flash-attn>=2.5"]

[project.scripts]
speechkv-trim = "speechkv_trim.cli:main"

[project.entry-points."speechkv_trim.pruners"]
token_attn_recency = "speechkv_trim.pruners.token_attn_recency:TokenAttnRecency"
token_saliency = "speechkv_trim.pruners.token_saliency:TokenSaliency"
head_l1 = "speechkv_trim.pruners.head_l1:HeadL1"
chunk_vad = "speechkv_trim.pruners.chunk_vad:ChunkVAD"
streaming_anchor = "speechkv_trim.pruners.streaming_anchor:StreamingAnchor"
